--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     margin: 0;
     width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 25px);
+    margin-top: 25px;
 }
 
 /* #region TitleBar*/
@@ -17,6 +18,7 @@ body {
     user-select: none;
     z-index: 5;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    /* transform: translateY(-25px); */
     /* display: none; */
 }
 
@@ -32,7 +34,7 @@ body {
 
 #window-controls {
     display: grid;
-    grid-template-columns: repeat(3, 30px);
+    grid-template-columns: repeat(2, 30px);
     position: absolute;
     top: 0;
     right: 0;
@@ -55,7 +57,7 @@ body {
     grid-column: 2;
 }
 #close-button {
-    grid-column: 3;
+    grid-column: 2;
 }
 
 #drag-region .title {
@@ -130,3 +132,65 @@ body {
     display: none;
 }
 /* #endregion */
+
+body {
+    justify-content: center;
+    background: #22272e;
+    overflow: hidden;
+}
+
+.game-grid {
+    background: #b1b1b1;
+    display: grid;
+    grid-template-columns: repeat(3, 113px);
+    grid-template-rows: repeat(3, 113px);
+    grid-gap: 9px;
+    margin-top: 50px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-178px);
+}
+
+.game-cell {
+    background: #22272e;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+}
+
+.who {
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+    margin: 50px 0px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.who div {
+    padding: 7px 25px;
+    height: auto;
+    color: white;
+    background-color: black;
+    font-size: 22px;
+    border-radius: 10px;
+    user-select: none;
+    cursor: pointer;
+    transition: background-color 300ms;
+}
+
+.who .you {
+    background-color: #00ff57;
+}
+
+.who .ai {
+    background-color: #d23d3d;
+}
+
+.who div:not(.active) {
+    opacity: 0.7;
+}
