--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
     top: 0;
     height: 25px;
     width: 100%;
-    background: #2e3031;
+    background: #27292c;
     user-select: none;
     z-index: 5;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -137,6 +137,7 @@ body {
     justify-content: center;
     background: #22272e;
     overflow: hidden;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-grid {
@@ -166,7 +167,7 @@ body {
     display: flex;
     width: 60%;
     justify-content: space-between;
-    margin: 50px 0px;
+    margin: 80px 0px 0px 0px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -182,6 +183,7 @@ body {
     user-select: none;
     cursor: pointer;
     transition: background-color 300ms;
+    transition: opacity 300ms;
 }
 
 .who .you {
@@ -194,4 +196,47 @@ body {
 
 .who div:not(.active) {
     opacity: 0.7;
+}
+
+.hide {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.winner {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #22272eb6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    transition: opacity 600ms;
+    backdrop-filter: blur(15px);
+}
+
+.winner .title {
+    font-size: 3rem;
+    font-weight: 600;
+    margin-top: 20px;
+}
+
+.winner .new-game {
+    font-size: 18px;
+    margin-top: 30px;
+    padding: 8px 16px;
+    font-weight: 500;
+    background-color: rgb(52, 136, 214);
+    cursor: pointer;
+    user-select: none;
+    border-radius: 7px;
+    transition: 300ms;
+}
+
+.winner .new-game:hover {
+    background-color: rgb(40, 140, 233);
 }
